# bevy_pxtxt

./: Cargo.toml  LICENSE  README.md
assets/: moonshock.ron
examples/: bounded.rs  picking.rs  sections.rs
src/: input.rs  lib.rs  plugin.rs  pxfont.rs  pxfontdata.rs  pxtext.rs  render_text.rs
