[package]
name = "bevy_pxtxt"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Create fonts and render text in bevy based on a bitmap source image."
repository = "https://github.com/Icni/bevy_pxtxt"
readme = "README.md"
categories = ["game-development"]
keywords = ["gamedev", "bevy", "text", "pixelart"]

[features]
default = ["png"]
bmp = ["image/bmp"]
png = ["image/png"]
jpeg = ["image/jpeg"]
gif = ["image/gif"]
tiff = ["image/tiff"]

[dependencies]
ahash = "0.8.11"
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset", "bevy_render", "bevy_sprite"
] }
image = "0.25.1"
serde = "1.0.203"
ron = "0.8.1"
thiserror = "1.0.61"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_asset",
  "bevy_render",
  "bevy_sprite",
  "bevy_core_pipeline",
  "multi-threaded",
  "x11",
  "wayland",
] }
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }

[[example]]
name = "bounded"

[[example]]
name = "picking"

[[example]]
name = "sections"
